--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
     <repository>
       <id>weswit</id>
       <name>Weswit repository</name>
-      <url>http://www.lightstreamer.com/repo/maven</url>
+      <url>https://www.lightstreamer.com/repo/maven</url>
     </repository>
   </repositories>
 </project>
