--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
     <dependency>
       <groupId>com.lightstreamer</groupId>
       <artifactId>ls-javase-client</artifactId>
-      <version>4.3.4</version>
+      <version>5.0.0-beta.1</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
